Fix: color contrast
Fixed color contrast that were not enough, but might have to look at it again later

--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: black!important;
 }
 
 .container {
@@ -678,6 +678,12 @@ a {
 
 p {
     font-size: 11px;
+}
+
+
+.black{
+    color: black !important;
+    font-size: 20px;
 }
 
 .tight-width-whitespace {
@@ -735,9 +741,6 @@ h4 {
     margin-top: 24px;
 }
 
-.white {
-    color: #FFFFFF!important;
-}
 
 .portfolio-thumb {
     margin-bottom: 24px;
@@ -771,16 +774,31 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
+
     background-color: #F3976C;
+
 }
 
 .tc-white {
-    color: #F3976C!important;
+    font-size: 35px;
+    color: #ffb593!important;
+}
+
+.tc-black-text{
+    font-size: 20px;
+}
+
+.tc-black {
+    font-size: 35px;
+    color: black !important;
+
 }
 
 .btn-atomic-tangerine {
+
     background: #F3976C;
-    color: #FFFFFF!important;
+
+    color: black !important;
 }
 
 .btn-atomic-tangerine:hover {
